fixed stretching of header background image

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -9,11 +9,9 @@
 }
 
 .nav-header {
-  width: 100%;
   max-height: 100px;
   background-image: url("../../images/header-banner.jpg");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .nav-header .nav-header-title {
